<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/coursesFragment"
        android:icon="@drawable/ic_nav_learn"
        android:title="@string/nav_learn"/>
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_nav_search"
        android:title="@string/nav_discover"/>
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/nav_cart"/>
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile"/>
</menu>
